trying to fix mobile horizontal scroll and some spacing issues

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -487,6 +487,9 @@ body {
 		ol li {
 			padding-left: 0.625rem;
 		}
+		h4 {
+			padding-top:1.25rem;
+		}
 		@media screen and (max-width:35.9375rem) {
 			h4, p, li {
 				text-align:center;
@@ -509,6 +512,7 @@ body {
 
 #why, #connect {
 	overflow-x: hidden !important;
+	max-width:100vw;
 	div.section-content {
 	 	max-width:71.25rem;
 	 	margin:auto;
